V5.1.2:
  * Windows installer

V5.1.1:
  * Fix STM32F baud setting
  * Update Jupyter requirements to have everything needed to run all tutorials
  * Fix chipwhisperer autodetect when nothing attached

V5.1.0:
  * Tutorial Updates:
      - New tutorial: Fault_5-RSA_Fault_Attack
      - New tutorial: Fault_2-Introduction_to_Vcc_Glitch_Attacks
      - New tutorial: PA_DPA_3-AES_DPA_Attack
      - New tutorial: PA_HW_Pro_1 added
      - New tutorial: !!Introduction_to_Jupyter!!
      - Fault_4 updated for new API
      - Tutorials now list supported hardware at the top of the tutorial
      - Improved support for non-CWLITEARM targets
      - Tutorial tests now output .rst files for Read the Docs
      - Change Setup.ipynb to Setup_Generic.ipynb
  * Scope updates:
      - Added default_setup() method
      - cw.scope() can now autodetect scope type
      - CWPro only features updated to work with API
  * Project updates:
      - Major project API updates
      - New project format
  * CW1200 Pro only features added to API
  * Completed tutorials now available on Read the Docs
  * Added tutorials submodule for completed tutorial .rst files
  * Key text pair interface updated
  * Added cw.capture_trace()
  * Moved Jupyter to Submodule in top of project
  * Separated requirements.txt into Jupyter (in Jupyter submodule) and non Jupyter files
  * Changed to snake_case instead of camelCase
  * Added Sphinx documentation
  * API now documented with Google Style Guide
  * Many tutorial changes to reflect API changes
  * Changed tutorials to use C preprocessor to change firmware rather than via awk
  * C firmware CRYPTO_TARGET no longer defaults to AVRCRYPTOLIB
  * CW308_AURIX clock and regulator fixes
  * Fixed generate_firmware_files.py for python3
  * Removed some unused files
  * Expose baud for STM32 programmer
  * Fixed XMEGA and STM32 programming issues
  * Fixed "Trigger not found in ADC data" issue
  * Improved CW305 support


V5.0.1:
  * Fixed project loading